CMake fixes to get 4.ee compiled.
- Detect Boost filesystem and system components.
- Check for std::seed_seq availability.
- Added missing compilation units.

--- a/gcache/src/CMakeLists.txt
+++ b/gcache/src/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(gcache
   gcache_page_store.cpp
   gcache_rb_store.cpp
   gcache_mem_store.cpp
+  gcache_test_encryption.cpp
   GCache_memops.cpp
   GCache.cpp
   )
