--- a/galera/tests/CMakeLists.txt
+++ b/galera/tests/CMakeLists.txt
@@ -28,7 +28,11 @@ target_compile_options(galera_check
   -Wno-unused-parameter
   )
 
-target_link_libraries(galera_check galera_smm_static ${GALERA_UNIT_TEST_LIBS})
+target_link_libraries(galera_check
+  galera_smm_static
+  ${GALERA_UNIT_TEST_LIBS}
+  ${Boost_FILESYSTEM_LIBRARIES}
+  ${Boost_SYSTEM_LIBRARIES})
 
 add_test(
   NAME galera_check
