--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: check,
                debhelper (>= 10),
                libasio-dev,
                libboost-dev (>= 1.41),
+               libboost-filesystem-dev (>= 1.41),
                libboost-program-options-dev (>= 1.41),
                libssl-dev,
                cmake (>= 2.8)
