Fix automatic merge error.

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: galera-enterprise-4
+Source: galera-4
 Maintainer: Codership Oy <info@codership.com>
 Uploaders: Otto Kekäläinen <otto@kekalainen.net>
 Section: database
@@ -17,13 +17,12 @@ Homepage: https://www.galeracluster.com/
 Vcs-Git: https://github.com/codership/galera.git
 Vcs-Browser: https://github.com/codership/galera
 
-Package: galera-enterprise-4
+Package: galera-4
 Architecture: any
 Section: libs
 Depends: ${misc:Depends},
          ${shlibs:Depends}
 Conflicts: galera-3,
-	   galera-4,
            garbd-2,
            garbd-3,
            garbd2,
@@ -40,7 +39,6 @@ Breaks: galera
 Replaces: galera
 Provides: galera,
           galera4,
-	  galera-enterprise-4,
           percona-xtradb-cluster-galera-26,
           wsrep
 Description: Replication framework for transactional applications
@@ -59,9 +57,9 @@ Depends: galera-4 (= ${binary:Version}), ${misc:Depends}
 Description: debugging symbols for galera-4
  This package contains the debugging symbols for galera-4.
 
+Package: galera-arbitrator-4
 Architecture: any
 Conflicts: galera-arbitrator-3,
-	   galera-arbitrator-4,
            garbd-2,
            garbd2,
            percona-galera-arbitrator-3,
