Improve error and warning messages from Galera library
1) Hide system error numbers and messages from thrown exceptions

System error numbers and messages cause confusion when used in
contexts where system calls are not involved. Hide the system error
number and message from exception messages and create separate
ThrowSystemError class and gu_throw_system_error() macro for
contexts where the system error number is relevant.

2) Fix error and warning messages not to use strerror

Using `strerror()` with error code in contexts where the error code
does not come from a system call may cause very misleading
error messages. Replace `strerror()` use around GCS code with two functions
gcs_error_str() and gcs_state_transfer_error_str() in contexts
where printing system error might be misleading.

4) Fix gcomm error logging

Change several warning level messages into info level messages
for cases which may happen during normal operation because
of network partitionings or cluster configuration changes.
Remove redundant warning messages in cases where the error
handling is handled by caller.

5) Convert gcs warning messages to info

Convert GCS messages which don't indicate any required action
from admin (e.g. error conditions will be dealt with retrying
or are result of expected conditions like network partitioning)
into info or debug messages.

6) Propagate IST error to IST event handler

The IST error is logged when the IST event queue becomes empty
and one of the appliers read the error status. This is to avoid
duplicate error logging from several contexts.

--- a/gcs/src/SConscript
+++ b/gcs/src/SConscript
@@ -51,6 +51,7 @@ libgcs_sources = Split('''
                           gcs_fc.cpp
                           gcs.cpp
                           gcs_gcomm.cpp
+                          gcs_error.cpp
                        ''')
 #libgcs_env.VariantDir('.gcs', '.', duplicate=0)
 libgcs_env.StaticLibrary('gcs', libgcs_sources)
