build(macos/other): librt is not needed for glibc >= 2.17
Since glibc >=2.17 (2012-12-25), librt is a stub-only library.
(https://abi-laboratory.pro/?view=changelog&l=glibc&v=2.17)

* The `clock_*' suite of functions (declared in <time.h>) is now available
  directly in the main C library.  Previously it was necessary to link with
  -lrt to use these functions.  This change has the effect that a
  single-threaded program that uses a function such as `clock_gettime' (and
  is not linked with -lrt) will no longer implicitly load the pthreads
  library at runtime and so will not suffer the overheads associated with
  multi-thread support in other code such as the C++ runtime library.

Current version on Arch Linux is 2.40.

It is however is required for Debian 10, 11 and Ubuntu 20.04.

Signed-off-by: Ivan Prisyazhnyy <john.koepi@gmail.com>

--- a/gcache/src/CMakeLists.txt
+++ b/gcache/src/CMakeLists.txt
@@ -33,7 +33,7 @@ target_link_libraries(gcache galerautilsxx)
 
 add_executable(gcache_test test.cpp)
 
-target_link_libraries(gcache_test gcache pthread rt)
+target_link_libraries(gcache_test gcache pthread)
 
 target_compile_options(gcache_test
   PRIVATE
