--- a/galerautils/tests/CMakeLists.txt
+++ b/galerautils/tests/CMakeLists.txt
@@ -102,7 +102,7 @@ target_compile_options(deqmap_bench
   PRIVATE
   -Wno-conversion)
 
-target_link_libraries(deqmap_bench galerautilsxx rt)
+target_link_libraries(deqmap_bench galerautilsxx)
 
 #
 # CRC32C micro benchmark.
