Squashed commit of the following:
commit 28664e025d8d0d300065fec310093de9d97b9e83
Author: Ivan Prisyazhnyy <john.koepi@gmail.com>
Date:   Wed Jul 31 14:47:46 2024 +0200

    macos: fix missing pthread mutex init after calloc

    calls constructor for a mutex in a struct value init-ed with gu_calloc.

    in path `gcs_core_create() -> gcs_group_init()`, the first one allocates
    `gcs_core_t* core` with gu_calloc() whereas `gcs_code_t` has
    `gcs_group_t group` with `gu::Mutex memb_mtx_`. After memory allocation
    gu::Mutex constructor was not called that lead to an error on Darwin in
    a call to pthread mutex lock.

    Signed-off-by: Ivan Prisyazhnyy <john.koepi@gmail.com>

commit 300fd48f9692eb6f4a893bb00d012d69c2c8ea08
Author: Ivan Prisyazhnyy <john.koepi@gmail.com>
Date:   Wed Jul 31 14:47:13 2024 +0200

    macos: darwin has time impl

    Signed-off-by: Ivan Prisyazhnyy <john.koepi@gmail.com>

commit cc39b1a1ec2efd1f51dc35bb9faf380e7ab5de29
Author: Ivan Prisyazhnyy <john.koepi@gmail.com>
Date:   Wed Jul 31 14:46:25 2024 +0200

    macos: apple is almost unix, support pthreads in gu

    Signed-off-by: Ivan Prisyazhnyy <john.koepi@gmail.com>

commit b8f08b77fd2144a2e6eebfa905b8e224dcebb3f7
Author: Ivan Prisyazhnyy <john.koepi@gmail.com>
Date:   Wed Jul 31 11:55:39 2024 +0200

    macos: tcp sock info support

    Signed-off-by: Ivan Prisyazhnyy <john.koepi@gmail.com>

commit 5e5ce69c6b263c6e4d11dbb34bb6c0e4b84af0f1
Author: Ivan Prisyazhnyy <john.koepi@gmail.com>
Date:   Wed Jul 31 11:54:23 2024 +0200

    macos: sym map is not supported by llvm clang

    Signed-off-by: Ivan Prisyazhnyy <john.koepi@gmail.com>

commit decf5cf76f0eb0ae4e2bbb5fd6357e1ca5b4fddf
Author: Ivan Prisyazhnyy <john.koepi@gmail.com>
Date:   Wed Jul 31 11:53:33 2024 +0200

    macos: librt is not needed

    Signed-off-by: Ivan Prisyazhnyy <john.koepi@gmail.com>

commit aea8fd74b4d5c6799528ea50e062f85035f61bbf
Author: Ivan Prisyazhnyy <john.koepi@gmail.com>
Date:   Wed Jul 31 11:50:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,15 +93,15 @@ include(cmake/endian.cmake)
 include(cmake/seed_seq.cmake)
 include(cmake/shared_ptr.cmake)
 include(cmake/unordered.cmake)
-include(cmake/check.cmake)
+# include(cmake/check.cmake)
 include(cmake/memorycheck.cmake)
 include(cmake/coverage.cmake)
 # Keep the maintainer mode as last to avoid feature checks failing
 # in compiler warnings.
 include(cmake/maintainer_mode.cmake)
 
-include(CTest)
-enable_testing()
+# include(CTest)
+# enable_testing()
 add_subdirectory(galerautils)
 add_subdirectory(gcomm)
 add_subdirectory(gcache)
@@ -109,7 +109,7 @@ add_subdirectory(gcs)
 add_subdirectory(garb)
 add_subdirectory(galera)
 add_subdirectory(scripts/packages)
-add_subdirectory(wsrep/tests)
+# add_subdirectory(wsrep/tests)
 
 if (NOT ${CMAKE_SYSTEM_NAME} MATCHES ".*BSD")
   install(FILES
